# DexI

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
dexi/: app.py
dexi/commands/: installer.py  manager.py  viewer.py
dexi/core/: dexi_types.py  errors.py  fun.py  package.py  utils.py
